    - major modification to particle array classes. 
	Constructor changed to take
      	a more elaborate specification of partile properties. 
	extend function added.
      	add_property function added.
      	the property_arrays attribute removed.
	
	Above changes needed for implementing aspects of the integrator class.


Thu Nov  5 09:49:06 IST 2009
    - tests for odestepper done, seems to be working fine.


Fri Nov  6 09:32:48 IST 2009
    - stepper specification in Integrator changed and documented.
    - add_property function changed to include stepper for each property.
    - tests for almost all functions in Integrator written.

Saturday 07 November 2009 (01:57:14 PM)
    - made the property specification in the particle_array and solver_component
      modules consistent.
    - module for dummy components added.
    - array_copier module added.
    - add_integration_property to EntityBase
    - clean mechanism to update property requirements of components.
    - Integrator, can now also be created without the default velocity and position
      properites.
    - Facility to add entity types to specific properties in the integrator.
    - Integrator.setup_component written - yet to be tested.
    - identifier and category added as class attributes to components.
    - Function to setup a given entity with required properties by the component
      manager.

Sunday 08 November 2009 (04:58:54 AM)
    - Integrator base class complete with tests.
    - more tests added for component manager.
    - tests for functions in Integrator.
    - partile property access mode changed/corrected in component manager. Two
      components of the same type can now be added to the component manager. But
      two different components having conflicting requirements cannot be added.
    - SPH function for simple density computation added.


Mon Nov  9 18:57:21 IST 2009
    - function to align LocalReal particles to the begining of the a particle
      array added.